# fact_check

./: .gitignore  QUICKSTART.md  README.md  app.py  benchmark.py  claim_verifier.py  claims_detector.py  config.py  document_retriever.py  example.py  pipeline.py  pyproject.toml  requirements.txt  run.py  select_evidence.py  setup.sh  topk_selector.py
benchmark_results/20260210_004626/: classification_report.txt  config.json  metrics.json  progress.json
benchmark_results/20260210_004626/predictions/: sample_0000.json  sample_0001.json  sample_0002.json  sample_0003.json  sample_0004.json  sample_0005.json  sample_0006.json  sample_0007.json  sample_0008.json  sample_0009.json  sample_0010.json  sample_0011.json  sample_0012.json  sample_0013.json  sample_0014.json  sample_0015.json  sample_0016.json  sample_0017.json  sample_0018.json  sample_0019.json  sample_0020.json  sample_0021.json  sample_0022.json  sample_0023.json  sample_0024.json  sample_0025.json  sample_0026.json  sample_0027.json  sample_0028.json  sample_0029.json  sample_0030.json  sample_0031.json  sample_0032.json  sample_0033.json  sample_0034.json  sample_0035.json  sample_0036.json  sample_0037.json  sample_0038.json  sample_0039.json  (+10 more)
data/: sampled_data.csv
fack-check-extension/: background.js  content.js  example.json  manifest.json
fact-check-web/: index.html  script.js  styles.css
