[project]
name = "fact-check"
version = "0.1.0"
description = "Fact checking application using LangChain and Google AI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain==1.2.9",
    "langchain-community==0.4.1",
    "langchain-classic==1.0.1",
    "langchain-google-genai==4.2.0",
    "google-generativeai==0.8.6",
    "numpy==1.26.4",
    "sentence-transformers==5.2.2",
    "crawl4ai==0.8.0",
    "playwright==1.58.0",
    "beautifulsoup4==4.14.3",
    "lxml==5.4.0",
    "nest-asyncio==1.6.0",
    "requests==2.32.5",
    "flask==3.1.2",
    "flask-cors==6.0.2",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "faiss-cpu==1.9.0",
]
